# dataops

./: .gitignore  .goal-v1.md  AGENTS.md  CLAUDE.md  Makefile  PORTAL_ANALYSIS.md  PROJECT_PLAN.md  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml  samconfig.toml
assistants/podcast/: .env.example  .gitignore  README.md  assistant_pytest.py  dry_run.py  heru_runner.py  main.py  message_queue.py  pyproject.toml  sitecustomize.py
assistants/podcast/data/: actual_podcast_episodes.json  actual_podcast_questions.csv  actual_podcast_questions.jsonl  podcast_clusters.json  podcast_episodes.json  podcast_episodes.jsonl  podcast_questions.csv  podcast_questions.jsonl
assistants/podcast/knowledge_base/: README.md  actual_questions_analysis.md  question_playbook.md
assistants/podcast/knowledge_base/clusters/: themes.md
assistants/podcast/knowledge_base/episodes/: 2024-01-00-name.md  2024-01-06-andrey-cheptsov.md  2024-09-16-kasia-foremniak.md  2024-09-26-alexey-grigorev.md  2024-11-22-isabella-bicalho-isabella-bicalho.md  2024-12-04-agita-jaunzeme.md  2024-14-10-anastasia-karavdina.md  2025-01-20-alexander-guschin.md  2025-02-10-bartosz-mikulski.md  2025-02-25-lavanya-gupta.md  2025-04-07-will-russell.md  2025-04-14-dimitri-visnadi.md  2025-06-30-orell-garten.md  2025-07-07-lior-barak.md  2025-07-21-alexey-grigorev.md  2025-08-18-pastor-soto.md  2025-09-15-vadim-smolyakov.md  2025-09-16-micheal-lanham.md  2025-09-22-aishwarya-jadhav.md  (+19 more)
assistants/podcast/process/: podcast.md
assistants/podcast/scripts/: import_actual_podcast_questions.py  search_podcast_kb.py
assistants/podcast/templates/: podcast_guest_intake.md
assistants/podcast/tests/: test_build_podcast_knowledge_base.py  test_dry_run.py  test_heru_runner.py  test_import_actual_podcast_questions.py  test_main.py  test_search_podcast_kb.py  test_session_retrier.py
assistants/podcast/tests_integration/: README.md  test_real_engines.py
lambda-functions/: Dockerfile  Makefile  README.md  pyproject.toml  samconfig.toml  template.api.yaml  template.full.yaml  template.github-actions-dataops.yaml  template.github-actions.yaml  template.runtime-secrets.yaml
lambda-functions/src/lambda_functions/: __init__.py  api_handler.py  build_search_index.py  doc_registry.py  docs_index.py  full_app_handler.py  github_store.py  http.py  local_server.py  process_quality.py  search_handler.py  sop_lint.py  validate_docs_links.py  validate_knowledge_repo.py
podcast-assistant/: .gitignore  README.md  main.py  process_request.py  progress_tracker.py  pyproject.toml  session_retrier.py
podcast-assistant/knowledge_base/clusters/: taxonomy.md
podcast-assistant/knowledge_base/episodes/: 2024-11-20-tamara-atanasoska.md  2025-01-22-adrian-brudaru.md  2025-02-03-nemanja-radojkovic.md  2025-02-24-eddy.md  2025-09-09-daniel-egbo.md  2025-09-23-ranjitha-kulkarni.md  2025-10-06-sebastian-ayala-ruano.md  2025-10-14-rileen-sinha.md  2025-11-17-xia-he-bleinagel.md  2026-01-12-paul-iusztin.md  2026-02-10-aditya-gautam.md  2026-05-12-mariano-semelman.md  2026-06-29-maryam-ramezani-bartsch.md
podcast-assistant/process/: podcast.md
podcast-assistant/scripts/: build_podcast_knowledge_base.py  search_podcast_kb.py
podcast-assistant/tests/: test_main.py  test_search_podcast_kb.py  test_session_retrier.py
tools/content_tools/: pyproject.toml
tools/content_tools/content_tools/: doc_registry.py  process_quality.py  sop_parse.py  validate_docs_links.py  validate_knowledge_repo.py
(+773 files in other folders)
