[project]
name = "lambda-functions"
version = "0.1.0"
description = "AWS Lambda functions for the DataTalksClub operations docs platform"
readme = "README.md"
authors = [
    { name = "Alexey Grigorev", email = "alexey.s.grigoriev@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
search = [
    "minsearch>=0.0.11",
    "python-frontmatter>=1.1.0",
]

[project.scripts]
build-search-index = "lambda_functions.build_search_index:main"
local-lambda-server = "lambda_functions.local_server:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
