[project]
name = "content-tools"
version = "0.1.0"
description = "Content validation CLI tools for DataOps docs, registry, and process quality (pure stdlib, no deploy dependencies)"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["content_tools"]
